Fixed misalignment of recipe picture for mobile devices.

--- a/static/assets/css/my-style.css
+++ b/static/assets/css/my-style.css
@@ -464,6 +464,12 @@ li span {
   }
 }
 
+@media screen and (max-width: 450px) {
+  .recipe-image {
+    margin-left: 23% !important;
+  }
+}
+
 @media screen and (max-width: 1024px) and (min-width: 768px) and (min-height:1024px) {
   .login-title {
     margin-top: 15%;
